--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>$PENGUIN | Slither & Earn</title>
+    <title>$PENGUIN | Play Slither, Win SOL</title>
     <meta name="description"
-        content="Play Slither, wager SOL, and earn $PENGUIN. The ultimate crypto gaming experience.">
+        content="The ultimate crypto Slither game. Wager SOL, eliminate opponents, collect their money. Cash out or die trying.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -25,20 +25,46 @@
         <!-- Header -->
         <header class="header">
             <div class="logo">
-                <img src="penguin_mascot_1769617105718.png" alt="Penguin" class="mascot">
+                <div class="logo-penguin">🐧</div>
                 <span class="logo-text">$PENGUIN</span>
             </div>
             <div class="live-stats">
-                <div class="stat">
-                    <span class="stat-value" id="playersOnline">127</span>
-                    <span class="stat-label">Playing Now</span>
+                <div class="stat stat-live">
+                    <span class="live-dot"></span>
+                    <span class="stat-value" id="playersOnline">147</span>
+                    <span class="stat-label">LIVE</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-value" id="totalWinnings">45,892</span>
-                    <span class="stat-label">SOL Won</span>
+                    <span class="stat-value" id="totalWinnings">$52,341</span>
+                    <span class="stat-label">WON TODAY</span>
                 </div>
             </div>
         </header>
+
+        <!-- Hero Section -->
+        <section class="hero">
+            <div class="hero-content">
+                <h1 class="hero-title">
+                    <span class="hero-sub">Slither-style PvP</span>
+                    <span class="hero-main">WAGER. KILL. EARN.</span>
+                </h1>
+                <p class="hero-desc">Eliminate other players and take their SOL. Cash out alive or lose everything.</p>
+                <div class="hero-stats">
+                    <div class="hero-stat">
+                        <span class="hero-stat-value">10%</span>
+                        <span class="hero-stat-label">Platform Fee</span>
+                    </div>
+                    <div class="hero-stat">
+                        <span class="hero-stat-value">100%</span>
+                        <span class="hero-stat-label">Skill Based</span>
+                    </div>
+                    <div class="hero-stat">
+                        <span class="hero-stat-value">INSTANT</span>
+                        <span class="hero-stat-label">Payouts</span>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Game Console -->
         <main class="game-console">
@@ -70,18 +96,11 @@
                     <button class="wager-btn" data-amount="1">1 SOL</button>
                     <button class="wager-btn" data-amount="5">5 SOL</button>
                 </div>
-                <div class="wager-info">
-                    <span>🏆 Top 3 split the pot!</span>
-                    <span>💎 +10% $PENGUIN bonus</span>
-                </div>
             </div>
 
             <!-- Play Button -->
             <button class="btn btn-primary btn-play" id="playButton">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                    <polygon points="5 3 19 12 5 21 5 3" />
-                </svg>
-                PLAY NOW
+                ▶ PLAY NOW
                 <div class="btn-shine"></div>
             </button>
 
@@ -125,24 +144,46 @@
             </div>
         </main>
 
+        <!-- How To Play -->
+        <section class="how-to-play">
+            <h2 class="section-header">How It Works</h2>
+            <div class="steps-grid">
+                <div class="step-card">
+                    <div class="step-number">1</div>
+                    <h3>Connect & Wager</h3>
+                    <p>Connect your Solana wallet and choose a stake: 0.1, 0.5, 1, or 5 SOL</p>
+                </div>
+                <div class="step-card">
+                    <div class="step-number">2</div>
+                    <h3>Kill & Collect</h3>
+                    <p>Eliminate opponents to drop their SOL as gold orbs. Collect them before others do!</p>
+                </div>
+                <div class="step-card">
+                    <div class="step-number">3</div>
+                    <h3>Cash Out (Q)</h3>
+                    <p>Hold Q to exit and secure your winnings. Die and you lose everything!</p>
+                </div>
+            </div>
+        </section>
+
         <!-- Token Info -->
         <section class="token-section">
-            <h2 class="section-header">$PENGUIN Tokenomics</h2>
+            <h2 class="section-header">$PENGUIN Token</h2>
             <div class="token-grid">
                 <div class="token-card">
                     <span class="token-icon">🎮</span>
                     <span class="token-title">Play to Earn</span>
-                    <span class="token-desc">Win games, earn $PENGUIN tokens</span>
+                    <span class="token-desc">Winners earn $PENGUIN bonus</span>
                 </div>
                 <div class="token-card">
                     <span class="token-icon">🔥</span>
-                    <span class="token-title">5% Burn</span>
-                    <span class="token-desc">Every game burns tokens</span>
+                    <span class="token-title">Deflationary</span>
+                    <span class="token-desc">Tokens burned every game</span>
                 </div>
                 <div class="token-card">
-                    <span class="token-icon">💰</span>
-                    <span class="token-title">Holder Rewards</span>
-                    <span class="token-desc">3% distributed to holders</span>
+                    <span class="token-icon">💎</span>
+                    <span class="token-title">Holder Perks</span>
+                    <span class="token-desc">Reduced fees for holders</span>
                 </div>
                 <div class="token-card">
                     <span class="token-icon">🚀</span>
@@ -165,39 +206,30 @@
             </div>
             <div class="cta-buttons">
                 <a href="#" class="btn btn-primary btn-cta">
-                    Buy on Pump.fun
-                    <div class="btn-shine"></div>
+                    <span>🛒</span> Buy on Pump.fun
                 </a>
-                <a href="#" class="btn btn-secondary btn-cta">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                        <path
-                            d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
-                    </svg>
-                    Twitter
+                <a href="https://twitter.com" target="_blank" class="btn btn-secondary btn-cta">
+                    <span>𝕏</span> Twitter
                 </a>
-                <a href="#" class="btn btn-secondary btn-cta">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                        <path
-                            d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z" />
-                    </svg>
-                    Discord
+                <a href="https://discord.gg" target="_blank" class="btn btn-secondary btn-cta">
+                    <span>💬</span> Discord
                 </a>
             </div>
         </section>
 
         <!-- Footer -->
         <footer class="footer">
-            <p>© 2025 $PENGUIN. Play responsibly. 🐹</p>
+            <p>$PENGUIN - Play at your own risk. 18+ only. Not financial advice.</p>
         </footer>
     </div>
 
-    <!-- Discord Floating Button -->
-    <a href="#" class="discord-float">
+    <!-- Discord Float -->
+    <a href="https://discord.gg" target="_blank" class="discord-float">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
             <path
                 d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z" />
         </svg>
-        Join Discord!
+        Join Discord
     </a>
 
     <script src="game.js"></script>
