Realistic bots: same wager, gamer names. Earnings hidden until kill

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <span class="hud-label">Rank</span>
                         <span class="hud-value" id="playerRank">#1</span>
                     </div>
-                    <div class="hud-item">
+                    <div class="hud-item" id="earningsHud" style="display: none;">
                         <span class="hud-label">Earnings</span>
                         <span class="hud-value" id="prizePool">+0.00 SOL</span>
                     </div>
