Arctic Theme Overhaul: Falling snow, Deep Blue/Cyan visuals, Blizzard storm

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Animated Background -->
-    <div class="hex-grid"></div>
+    <div class="snow-layer"></div>
     <div class="glow-orb glow-orb-1"></div>
     <div class="glow-orb glow-orb-2"></div>
     <div class="glow-orb glow-orb-3"></div>
