--- a/index.html
+++ b/index.html
@@ -107,21 +107,27 @@
             <!-- Game Canvas (Hidden until game starts) -->
             <div class="game-wrapper" id="gameWrapper">
                 <canvas id="gameCanvas"></canvas>
+                <!-- Game HUD (Floating) -->
                 <div class="game-hud">
-                    <div class="hud-item">
-                        <span class="hud-label">Length</span>
-                        <span class="hud-value" id="snakeLength">10</span>
+                    <button id="exitGame" class="btn-exit">Exit Game</button>
+
+                    <div class="stats-pill">
+                        <div class="stat-unit">
+                            <span class="stat-label">LENGTH</span>
+                            <span class="stat-value" id="snakeLength">10</span>
+                        </div>
+                        <div class="stat-divider"></div>
+                        <div class="stat-unit">
+                            <span class="stat-label">RANK</span>
+                            <span class="stat-value" id="playerRank">#1</span>
+                        </div>
                     </div>
-                    <div class="hud-item">
-                        <span class="hud-label">Rank</span>
-                        <span class="hud-value" id="playerRank">#1</span>
-                    </div>
-                    <div class="hud-item" id="earningsHud" style="display: none;">
-                        <span class="hud-label">Earnings</span>
-                        <span class="hud-value" id="prizePool">+0.00 SOL</span>
+
+                    <div class="earnings-pill" id="earningsHud" style="display: none;">
+                        <span class="stat-label">PROFIT</span>
+                        <span class="stat-value gold" id="prizePool">+0.00 SOL</span>
                     </div>
                 </div>
-                <button class="btn btn-danger" id="exitGame">Exit Game</button>
             </div>
 
             <!-- Recent Winners -->
